add catchAsync function but not apply
