# swagger-output.json
@@ -99,102 +99,13 @@
           "200": {
             "description": "取得貼文回傳資訊",
             "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "_id": {
-                      "type": "string",
-                      "example": "貼文 id"
-                    },
-                    "user": {
-                      "type": "object",
-                      "properties": {
-                        "_id": {
-                          "type": "string",
-                          "example": "使用者 id"
-                        },
-                        "avatar": {
-                          "type": "string",
-                          "example": "使用者大頭貼"
-                        },
-                        "userName": {
-                          "type": "string",
-                          "example": "使用者名稱"
-                        }
-                      }
-                    },
-                    "tags": {
-                      "type": "array",
-                      "example": [
-                        "貼文標籤"
-                      ],
-                      "items": {
-                        "type": "string"
-                      }
-                    },
-                    "type": {
-                      "type": "string",
-                      "example": "貼文類別"
-                    },
-                    "image": {
-                      "type": "string",
-                      "example": "貼文圖片"
-                    },
-                    "content": {
-                      "type": "string",
-                      "example": "貼文內容"
-                    },
-                    "likes": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "comments": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "example": "貼文發布時間(UTC)"
-                    },
-                    "createdAtTW": {
-                      "type": "string",
-                      "example": "貼文發布時間(UTC+8)"
-                    }
-                  }
-                },
-                "success": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "message": {
-                  "type": "string",
-                  "example": "API 訊息"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/getSinglePostSuccessfully"
             }
           },
           "400": {
             "description": "錯誤 id",
             "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": false
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Invalid Id."
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/commonError"
             }
           }
         }
@@ -229,13 +140,10 @@
           {
             "name": "body",
             "in": "body",
+            "description": "資料格式",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "content": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/updatePostBody"
             }
           }
         ],
@@ -255,40 +163,7 @@
             "description": "資料格式",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "content": {
-                  "type": "string",
-                  "example": "貼文內容"
-                },
-                "userId": {
-                  "type": "string",
-                  "example": "使用者 id"
-                },
-                "tags": {
-                  "type": "array",
-                  "example": [
-                    "貼文標籤"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "type": {
-                  "type": "string",
-                  "example": "person"
-                },
-                "image": {
-                  "type": "string",
-                  "example": ""
-                }
-              },
-              "required": [
-                "content",
-                "userId",
-                "tags",
-                "type"
-              ]
+              "$ref": "#/definitions/createNewPostBody"
             }
           }
         ],
@@ -296,102 +171,13 @@
           "201": {
             "description": "新增貼文成功",
             "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "user": {
-                      "type": "object",
-                      "properties": {
-                        "_id": {
-                          "type": "string",
-                          "example": "使用者 id"
-                        },
-                        "avatar": {
-                          "type": "string",
-                          "example": "使用者大頭貼"
-                        },
-                        "userName": {
-                          "type": "string",
-                          "example": "使用者名稱"
-                        }
-                      }
-                    },
-                    "tags": {
-                      "type": "array",
-                      "example": [
-                        "貼文標籤"
-                      ],
-                      "items": {
-                        "type": "string"
-                      }
-                    },
-                    "type": {
-                      "type": "string",
-                      "example": "person"
-                    },
-                    "image": {
-                      "type": "string",
-                      "example": "貼文圖片網址"
-                    },
-                    "content": {
-                      "type": "string",
-                      "example": "貼文內容"
-                    },
-                    "likes": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "comments": {
-                      "type": "number",
-                      "example": 0
-                    },
-                    "_id": {
-                      "type": "string",
-                      "example": "貼文 id"
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "example": "貼文發布時間(UTC)"
-                    },
-                    "createdAtTW": {
-                      "type": "string",
-                      "example": "貼文發布時間(UTC+08:00)"
-                    }
-                  }
-                },
-                "success": {
-                  "type": "boolean",
-                  "example": true
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Create post successfully."
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/createNewPostSuccessfully"
             }
           },
           "400": {
             "description": "新增貼文失敗",
             "schema": {
-              "type": "object",
-              "properties": {
-                "success": {
-                  "type": "boolean",
-                  "example": false
-                },
-                "message": {
-                  "type": "string",
-                  "example": "錯誤訊息描述"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/commonError"
             }
           }
         },
@@ -517,6 +303,206 @@
           "example": 1
         }
       }
+    },
+    "getSinglePostSuccessfully": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": "貼文 id"
+            },
+            "user": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "使用者 id"
+                },
+                "avatar": {
+                  "type": "string",
+                  "example": "使用者大頭貼"
+                },
+                "userName": {
+                  "type": "string",
+                  "example": "使用者名稱"
+                }
+              }
+            },
+            "tags": {
+              "type": "array",
+              "example": [
+                "貼文標籤"
+              ],
+              "items": {
+                "type": "string"
+              }
+            },
+            "type": {
+              "type": "string",
+              "example": "貼文類別"
+            },
+            "image": {
+              "type": "string",
+              "example": "貼文圖片"
+            },
+            "content": {
+              "type": "string",
+              "example": "貼文內容"
+            },
+            "likes": {
+              "type": "number",
+              "example": 0
+            },
+            "comments": {
+              "type": "number",
+              "example": 0
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "貼文發布時間(UTC)"
+            },
+            "createdAtTW": {
+              "type": "string",
+              "example": "貼文發布時間(UTC+8)"
+            }
+          }
+        },
+        "success": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "API 訊息"
+        }
+      }
+    },
+    "createNewPostSuccessfully": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "user": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "使用者 id"
+                },
+                "avatar": {
+                  "type": "string",
+                  "example": "使用者大頭貼"
+                },
+                "userName": {
+                  "type": "string",
+                  "example": "使用者名稱"
+                }
+              }
+            },
+            "tags": {
+              "type": "array",
+              "example": [
+                "貼文標籤"
+              ],
+              "items": {
+                "type": "string"
+              }
+            },
+            "type": {
+              "type": "string",
+              "example": "person"
+            },
+            "image": {
+              "type": "string",
+              "example": "貼文圖片網址"
+            },
+            "content": {
+              "type": "string",
+              "example": "貼文內容"
+            },
+            "likes": {
+              "type": "number",
+              "example": 0
+            },
+            "comments": {
+              "type": "number",
+              "example": 0
+            },
+            "_id": {
+              "type": "string",
+              "example": "貼文 id"
+            },
+            "createdAt": {
+              "type": "string",
+              "example": "貼文發布時間(UTC)"
+            },
+            "createdAtTW": {
+              "type": "string",
+              "example": "貼文發布時間(UTC+08:00)"
+            }
+          }
+        },
+        "success": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "Create post successfully."
+        }
+      }
+    },
+    "createNewPostBody": {
+      "type": "object",
+      "properties": {
+        "content": {
+          "type": "string",
+          "example": "貼文內容"
+        },
+        "userId": {
+          "type": "string",
+          "example": "使用者 id"
+        },
+        "tags": {
+          "type": "array",
+          "example": [
+            "貼文標籤"
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "type": {
+          "type": "string",
+          "example": "person"
+        },
+        "image": {
+          "type": "string",
+          "example": ""
+        }
+      },
+      "required": [
+        "content",
+        "userId",
+        "tags",
+        "type"
+      ]
+    },
+    "updatePostBody": {
+      "type": "object",
+      "properties": {
+        "content": {
+          "type": "string",
+          "example": "貼文內容"
+        }
+      },
+      "required": [
+        "content"
+      ]
     }
   }
 }
